Fixed errors from play logs (#3183)